--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="sortByDate">Сортировка по времени</string>
     <string name="search">Поиск</string>
     <string name="undo">Отменить</string>
+    <string name="addNew">Новая запись</string>
     <!--Меню-->
     <string name="navigation_drawer_open">Открыть боковое меню</string>
     <string name="navigation_drawer_close">Закрыть боковое меню</string>
