--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="sort">Сортировка</string>
     <string name="sortByName">Сортировка по имени</string>
     <string name="sortByDate">Сортировка по времени</string>
+    <string name="sortDefault">Сортировка по умолчанию</string>
     <string name="search">Поиск</string>
     <string name="undo">Отменить</string>
     <string name="addNew">Новая запись</string>
