Product Add/Edit Logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="productEdited">Продукт изменен</string>
     <string name="daysLeft">Осталось дней:</string>
     <string name="expired">Срок годности истек</string>
+    <string name="addedProduct">Продукт добален</string>
+    <string name="editedProduct">Продукт обновлен</string>
     <!--Рецепты-->
     <string name="addRecipe">Добавить рецепт</string>
     <string name="startCooking">Начать готовить</string>
