Notification. The responsibilities are divided into the bottom sheet and the bottom sheet view model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <!--Уведомления-->
     <string name="addNotification">Добавить уведомление</string>
     <string name="timeNotification">Время уведомления</string>
+    <string name="showOnNextDay">Показать на следующий день</string>
     <string name="notificationCreated">Уведомление создано</string>
     <string name="notificationTitle">"Не забудьте купить продукты."</string>
     <string name="notificationDescription">"Настало установленое время, нажмите на уведомление, чтобы увидеть список покупок."</string>
