--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="expiredToday">Срок годности истекает сегодня</string>
     <string name="addedProduct">Продукт добален</string>
     <string name="editedProduct">Продукт обновлен</string>
+    <string name="deleteAllProductsMessage">Вы уверены, что хотите очистить список продуктов?</string>
     <!--Рецепты-->
     <string name="addRecipe">Добавить рецепт</string>
     <string name="startCooking">Начать готовить</string>
@@ -58,6 +59,7 @@
     <string name="addedToBuy">Покупка добалена</string>
     <string name="editedToBuy">Покупка обновлена</string>
     <string name="deleteAllCompletedMessage">Вы уверены, что хотите удалить все завершенные покупки?</string>
+    <string name="deleteAllToBuyMessage">Вы уверены, что хотите очистить список покупок?</string>
     <!--Уведомления-->
     <string name="addNotification">Добавить уведомление</string>
     <string name="timeNotification">Время уведомления</string>
@@ -68,4 +70,7 @@
     <string name="descriptionNotification">Получите уведомление в удобное время, чтобы не забыть о ваших покупках.</string>
     <!--Помощь-->
     <!--Настройки-->
+    <string name="clearProducts">Удалить все продукты</string>
+    <string name="clearToBuy">Удалить всё из списка покупок</string>
+    <string name="tableData">Данные в приложении</string>
 </resources>
