Recipe. Add/Edit Logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="description">Описание</string>
     <string name="favorite">Любимый</string>
     <string name="recipeDeleted">Рецепт удален</string>
+    <string name="addedRecipe">Рецепт добален</string>
+    <string name="editedRecipe">Рецепт обновлен</string>
     <!--Список покупок-->
     <string name="addToList">Добавить</string>
     <string name="important">Важное</string>
