--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <!--Общее-->
     <string name="app_name">Кухонный помощник</string>
-    <string name="version">Version 1</string>
+    <string name="version">Version 1.1</string>
     <string name="retype">"Повторите ввод"</string>
     <string name="edit">Изменить</string>
     <string name="name">Название</string>
@@ -15,6 +15,8 @@
     <string name="addNew">Новая запись</string>
     <string name="confirmDeletion">Подтвердите удаление</string>
     <string name="confirm">Подтвердить</string>
+    <string name="increaseButton">IncreaseButton</string>
+    <string name="decreaseButton">DecreaseButton</string>
     <!--Меню-->
     <string name="navigation_drawer_open">Открыть боковое меню</string>
     <string name="navigation_drawer_close">Закрыть боковое меню</string>
