--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,12 @@
     <string name="clearToBuy">Удалить всё из списка покупок</string>
     <string name="clearRecipe">Удалить все рецепты</string>
     <string name="tableData">Данные в приложении</string>
+    <!--Меры весов-->
+    <string name="measure">Measure</string>
+    <string name="kg">Кг</string>
+    <string name="g">г</string>
+    <string name="L">Л</string>
+    <string name="ml">мл</string>
+    <string name="stuff">шт</string>
+    <string name="pack">уп</string>
 </resources>
