--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="favorite">Любимый</string>
     <string name="previousButton">previousButton</string>
     <string name="nextButton">nextButton</string>
+    <string name="deleteButton">deleteButton</string>
     <string name="recipeDeleted">Рецепт удален</string>
     <string name="addedRecipe">Рецепт добален</string>
     <string name="editedRecipe">Рецепт обновлен</string>
