--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="addedRecipe">Рецепт добален</string>
     <string name="editedRecipe">Рецепт обновлен</string>
     <string name="deleteAllRecipeMessage">Вы уверены, что хотите очистить список рецептов?</string>
+    <string name="errorDescription">"Если вы видите это сообщение, то передача рецепта между фрагментами завершилась ошибкой."</string>
     <!--Список покупок-->
     <string name="addToList">Добавить</string>
     <string name="important">Важное</string>
